Version 7.5.2
=============

New Features and Enhancements
-----------------------------
* Switching between views is now supported, using SetView
  The following classes support switching views:
   - Frames
   - MDI Children
   - Dockers
   - DockContainers
   
* Updated Dockers
   - Only valid dock targets are displayed (honours DS_NO_DOCKCHILD_XXX)
   - Click and drag tab swaps to swap them for DockContainers and TabbedMDIs
   - Parent dockers now have a minimum size.
   - The DockTabbedMDI sample now includes a Window menu.
   - Dock containers with one tab now hide the tab.
   - Improved hinting for container within container docking
 
* Added support for vertical ToolBars and ReBars
   - These are demonstrated in the ReBar and ToolBar samples. 
   
* Added samples
   - ToolBar sample demonstrates vertical ToolBars and customizing ToolBars
   - Rebar sample demonstrates a vertical ReBar containing a vertical ToolBar.   
 
* The Themes sample now demonstrates how to save a band's size and position 
  in the registry.
   

Changes in detail
-----------------
Added CFrame::DrawReBarBkgnd
Added CDocker::GetViewRect
Modified CTabbedMDI::GetTab			now returns CWnd*

Added user defined messages:
UWM_GETFRAMEVIEW:		Used by CFrame.  Returns the view window's HWND 
UWN_DRAWRBBKGND:        Used by CFrame.  Called for ReBar background redrawing
UWN_TABDRAGGED:         Used by CTabbedMDI. Called when a CTab's tab is dragged


Version 7.5.1
=============
Bug Fixes:
* Fixed memory leak in CDIObject
* Hand cursor is now displayed over hyperlink in DialogDemo sample
* Removed flicker for CMenuBar when run on Windows 98


Version 7.5
===========
Bug Fixes:
* The drop-down lists for combo boxes are now displayed correctly.
* Fix for ToolBars on Win95

New Features and Enhancements
-----------------------------
* Added CRichEdit. This class provides support for Rich Edit controls
* Updated the approach to using threads
   - CWinThread is used in place of CThread.